--- a/example/src/css/index.scss
+++ b/example/src/css/index.scss
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 @import "modern-normalize/modern-normalize.css";
 @import "@goodjpl/styling/root.scss";
 
