--- a/src/styles/odi-attributes.css
+++ b/src/styles/odi-attributes.css
@@ -31,9 +31,18 @@
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); /* Slightly larger shadow on hover */
 }
 
-.odi-hide {
+.odi-overview .odi-hide {
   display: none;
 }
+
+.odi-detail.odi-customizing .odi-shown {
+  opacity: 1;
+  /* outline: 2px solid #53535330;
+  background: #5353530e; */
+  outline: none;
+  background: none;
+}
+
 
 /* 
 .odi-detail.odi-customizing [data-odi-hide] {
