--- a/src/styles/odi-attributes.css
+++ b/src/styles/odi-attributes.css
@@ -35,7 +35,7 @@
   display: none;
 }
 
-.odi-detail.odi-customizing .odi-shown {
+.odi-detail.odi-customizing :not(.odi-hide) {
   opacity: 1;
   /* outline: 2px solid #53535330;
   background: #5353530e; */
